# NewKit

./: .gitignore  README.md  batch_process.py  main.py  newkit_notebook.ipynb  pyproject.toml  test_inferencers.py  test_main.py  utils.py
.github/workflows/: test.yml
data_processing/: angle_calculator.py  classification_smoothing.py  classification_visualizer.py  error_classification.py  exercise_classifier.py  pose_classifier.py  pose_embedding.py  pose_frame_identifier.py  pose_sample.py  pose_sample_outlier.py  repetition_counter.py  utils.py
fitness_poses_csvs_out/: pushups_down.csv  pushups_up.csv
inferencers/: base_inferencer.py  image_inferencer.py  video_inferencer.py
utils/: data_processing.py  utils.py
